<resources>
    <string name="app_name">NHL Tracker</string>
    <string name="refresh_button">Refresh</string>
    <string name="add_button">Add/Remove Team</string>
    <string name="remvoe_button">Remove Team</string>
    <string name="enter_button">Enter</string>
    <string name="team_code">Team Code</string>
    <string name="team_name">Team Name</string>
    <string name="dialog_remove_team">Remove Team?</string>
    <string name="remove">remove</string>
    <string name="cancel_button">cancel</string>
    <string name="team_details">This Months Games</string>
    <string name="team_details_team_name">Team Name</string>
    <string name="detail_teams_playing">Team vs Team</string>
    <string name="detail_score">Score:</string>
    <string name="detail_location">Loc:</string>
    <string name="detail_start_time">start time:</string>
    <string name="detail_score_str">Score: </string>
</resources>
