<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hasbrouckproductions.rhasbrouck.nhltracker.AddTeamActivity"
    android:orientation="vertical">

    <Space
        android:layout_width="50px"
        android:layout_height="50px"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teamNameEditText"
        android:hint="@string/team_name"
        />

    <Space
        android:layout_width="20px"
        android:layout_height="50px"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team_code"
        android:id="@+id/teamCodeEditText"
        android:layout_weight="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_button"
        android:id="@+id/enterButton"/>
</LinearLayout>
